// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The User benefits stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "userbenefitslambdauserbenefitsCODEEndpoint4F1CA138": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - User benefits received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "user-benefits-CODE API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "user-benefits-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmUserbenefitsB3A2F7F7": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-CODE",
              ],
            ],
          },
        ],
        "AlarmDescription": "user-benefits exceeded 5% error rate",
        "AlarmName": "High 5XX error percentage from user-benefits (ApiGateway) in CODE",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for user-benefits",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "user-benefits-CODE",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "user-benefits-CODE",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
        "Stage": {
          "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "user-benefits.code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "user-benefits.code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/CODE/user-benefits/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "userbenefitslambdaServiceRoleD30C43BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "userbenefitslambdaD2A6379F": {
      "DependsOn": [
        "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF",
        "userbenefitslambdaServiceRoleD30C43BC",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/CODE/user-benefits/user-benefits.zip",
        },
        "Description": "An API Gateway triggered lambda generated in the support-service-lambdas repo",
        "Environment": {
          "Variables": {
            "APP": "user-benefits",
            "App": "user-benefits",
            "STACK": "membership",
            "STAGE": "CODE",
            "Stack": "membership",
            "Stage": "CODE",
          },
        },
        "FunctionName": "user-benefits-CODE",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "userbenefitslambdaServiceRoleD30C43BC",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "userbenefitslambdaServiceRoleD30C43BC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Query",
              "Effect": "Allow",
              "Resource": {
                "Fn::ImportValue": "supporter-product-data-tables-CODE-SupporterProductDataTable",
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/CODE/user-benefits/user-benefits.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/user-benefits",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/membership/user-benefits/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF",
        "Roles": [
          {
            "Ref": "userbenefitslambdaServiceRoleD30C43BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "userbenefitslambdauserbenefitsCODE14241B5B": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "user-benefits-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "userbenefitslambdauserbenefitsCODEANYApiPermissionTestuserbenefitsCODEuserbenefitslambdauserbenefitsCODEE492CB09ANYBC63C954": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsCODEANYApiPermissionuserbenefitsCODEuserbenefitslambdauserbenefitsCODEE492CB09ANYCCE5B60A": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
              },
              "/",
              {
                "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsCODEANYB79394BE": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "userbenefitslambdaD2A6379F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsCODE14241B5B",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "userbenefitslambdauserbenefitsCODEAccountF3DF647C": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "userbenefitslambdauserbenefitsCODE14241B5B",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsCODECloudWatchRole264FB427",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "userbenefitslambdauserbenefitsCODECloudWatchRole264FB427": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "userbenefitslambdauserbenefitsCODEDeployment236838197538cf027bef77b851e3854400bf32af": {
      "DependsOn": [
        "userbenefitslambdauserbenefitsCODEproxyANY433A9AFE",
        "userbenefitslambdauserbenefitsCODEproxy0CF74ECD",
        "userbenefitslambdauserbenefitsCODEANYB79394BE",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57": {
      "DependsOn": [
        "userbenefitslambdauserbenefitsCODEAccountF3DF647C",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "userbenefitslambdauserbenefitsCODEDeployment236838197538cf027bef77b851e3854400bf32af",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "userbenefitslambdauserbenefitsCODEUsagePlan13296C30": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
            },
            "Stage": {
              "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for user-benefits",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "user-benefits-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "userbenefitslambdauserbenefitsCODEUsagePlanUsagePlanKeyResourceuserbenefitsCODEuserbenefitslambdauserbenefitsCODEuserbenefitskeyCODECF9C3728FBAE29D7": {
      "Properties": {
        "KeyId": {
          "Ref": "userbenefitslambdauserbenefitsCODEuserbenefitskeyCODE59AE19DB",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "userbenefitslambdauserbenefitsCODEUsagePlan13296C30",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "userbenefitslambdauserbenefitsCODEproxy0CF74ECD": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsCODE14241B5B",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "userbenefitslambdauserbenefitsCODEproxyANY433A9AFE": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "userbenefitslambdaD2A6379F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "userbenefitslambdauserbenefitsCODEproxy0CF74ECD",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "userbenefitslambdauserbenefitsCODEproxyANYApiPermissionTestuserbenefitsCODEuserbenefitslambdauserbenefitsCODEE492CB09ANYproxy1B5A3709": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsCODEproxyANYApiPermissionuserbenefitsCODEuserbenefitslambdauserbenefitsCODEE492CB09ANYproxy90704E13": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
              },
              "/",
              {
                "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsCODEuserbenefitskeyCODE59AE19DB": {
      "Properties": {
        "Enabled": true,
        "Name": "user-benefits-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "userbenefitslambdauserbenefitsCODE14241B5B",
            },
            "StageName": {
              "Ref": "userbenefitslambdauserbenefitsCODEDeploymentStageCODEE2C1EB57",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
  },
}
`;

exports[`The User benefits stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuApiLambda",
      "GuApiGateway5xxPercentageAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "userbenefitslambdauserbenefitsPRODEndpoint3573AD65": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - User benefits received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "user-benefits-PROD API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "user-benefits-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ApiGatewayHigh5xxPercentageAlarmUserbenefitsB3A2F7F7": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "user-benefits exceeded 5% error rate",
        "AlarmName": "High 5XX error percentage from user-benefits (ApiGateway) in PROD",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "Metrics": [
          {
            "Expression": "100*m1/m2",
            "Id": "expr_1",
            "Label": "% of 5XX responses served for user-benefits",
          },
          {
            "Id": "m1",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "user-benefits-PROD",
                  },
                ],
                "MetricName": "5XXError",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "Sum",
            },
            "ReturnData": false,
          },
          {
            "Id": "m2",
            "MetricStat": {
              "Metric": {
                "Dimensions": [
                  {
                    "Name": "ApiName",
                    "Value": "user-benefits-PROD",
                  },
                ],
                "MetricName": "Count",
                "Namespace": "AWS/ApiGateway",
              },
              "Period": 60,
              "Stat": "SampleCount",
            },
            "ReturnData": false,
          },
        ],
        "Threshold": 5,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
        "Stage": {
          "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "user-benefits.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "user-benefits.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3inlinepolicy3B07399A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3::*:membership-dist/membership/PROD/user-benefits/",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3inlinepolicy3B07399A",
        "Roles": [
          {
            "Ref": "userbenefitslambdaServiceRoleD30C43BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "userbenefitslambdaD2A6379F": {
      "DependsOn": [
        "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF",
        "userbenefitslambdaServiceRoleD30C43BC",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "membership/PROD/user-benefits/user-benefits.zip",
        },
        "Description": "An API Gateway triggered lambda generated in the support-service-lambdas repo",
        "Environment": {
          "Variables": {
            "APP": "user-benefits",
            "App": "user-benefits",
            "STACK": "membership",
            "STAGE": "PROD",
            "Stack": "membership",
            "Stage": "PROD",
          },
        },
        "FunctionName": "user-benefits-PROD",
        "Handler": "index.handler",
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "userbenefitslambdaServiceRoleD30C43BC",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "userbenefitslambdaServiceRoleD30C43BC": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Query",
              "Effect": "Allow",
              "Resource": {
                "Fn::ImportValue": "supporter-product-data-tables-PROD-SupporterProductDataTable",
              },
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/membership/PROD/user-benefits/user-benefits.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/user-benefits",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/membership/user-benefits/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "userbenefitslambdaServiceRoleDefaultPolicy08D83DDF",
        "Roles": [
          {
            "Ref": "userbenefitslambdaServiceRoleD30C43BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "userbenefitslambdauserbenefitsPROD46740E25": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "user-benefits-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "userbenefitslambdauserbenefitsPRODANYApiPermissionTestuserbenefitsPRODuserbenefitslambdauserbenefitsPROD033FBE01ANY0CD327F0": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsPRODANYApiPermissionuserbenefitsPRODuserbenefitslambdauserbenefitsPROD033FBE01ANYAD452002": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
              },
              "/",
              {
                "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsPRODANYEAF8DF58": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "userbenefitslambdaD2A6379F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsPROD46740E25",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "userbenefitslambdauserbenefitsPRODAccount7774F186": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "userbenefitslambdauserbenefitsPROD46740E25",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsPRODCloudWatchRole2EFDF87B",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "userbenefitslambdauserbenefitsPRODCloudWatchRole2EFDF87B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "userbenefitslambdauserbenefitsPRODDeploymentDD11CFA18ea73d36d2812ee1d278b44a67d96b70": {
      "DependsOn": [
        "userbenefitslambdauserbenefitsPRODproxyANY38F6879D",
        "userbenefitslambdauserbenefitsPRODproxy8D0A546A",
        "userbenefitslambdauserbenefitsPRODANYEAF8DF58",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B": {
      "DependsOn": [
        "userbenefitslambdauserbenefitsPRODAccount7774F186",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "userbenefitslambdauserbenefitsPRODDeploymentDD11CFA18ea73d36d2812ee1d278b44a67d96b70",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "userbenefitslambdauserbenefitsPRODUsagePlanD32EE983": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
            },
            "Stage": {
              "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for user-benefits",
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "user-benefits-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "userbenefitslambdauserbenefitsPRODUsagePlanUsagePlanKeyResourceuserbenefitsPRODuserbenefitslambdauserbenefitsPRODuserbenefitskeyPROD5A91DFA3F85EF91B": {
      "Properties": {
        "KeyId": {
          "Ref": "userbenefitslambdauserbenefitsPRODuserbenefitskeyPROD35180CEA",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "userbenefitslambdauserbenefitsPRODUsagePlanD32EE983",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "userbenefitslambdauserbenefitsPRODproxy8D0A546A": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "userbenefitslambdauserbenefitsPROD46740E25",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "userbenefitslambdauserbenefitsPRODproxyANY38F6879D": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "userbenefitslambdaD2A6379F",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "userbenefitslambdauserbenefitsPRODproxy8D0A546A",
        },
        "RestApiId": {
          "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "userbenefitslambdauserbenefitsPRODproxyANYApiPermissionTestuserbenefitsPRODuserbenefitslambdauserbenefitsPROD033FBE01ANYproxyF7592444": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsPRODproxyANYApiPermissionuserbenefitsPRODuserbenefitslambdauserbenefitsPROD033FBE01ANYproxy9335DA4D": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "userbenefitslambdaD2A6379F",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
              },
              "/",
              {
                "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "userbenefitslambdauserbenefitsPRODuserbenefitskeyPROD35180CEA": {
      "Properties": {
        "Enabled": true,
        "Name": "user-benefits-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "userbenefitslambdauserbenefitsPROD46740E25",
            },
            "StageName": {
              "Ref": "userbenefitslambdauserbenefitsPRODDeploymentStagePROD1EA2411B",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "user-benefits",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "membership",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
  },
}
`;
